--- a/absensigunungmasp1/android/app/src/main/res/values/strings.xml
+++ b/absensigunungmasp1/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">absensigunungmasp1</string>
+    <string name="app_name">Lorus Absensi </string>
 </resources>
